Fix arm detection code in gn.

The current code calls substr(3), which gets the substring starting from
index 3 up to the end of the string. However, on Ubuntu armhf (and
likely other systems), arm is the first three characters, and the
original intention was likely to get the substring of length 3 starting
from the beginning of the string.

R=brettw@chromium.org
BUG=607385

Review-Url: https://codereview.chromium.org/1920033007
Cr-Commit-Position: refs/heads/master@{#390507}

Former-commit-id: b68180a770804afde260b0f1c9747f10139b20b3